@@ -1,0 +1,35 @@
+#  -*- Autoconf -*-
+
+AT_SETUP([automate get_file])
+NEED_UNB64
+MONOTONE_SETUP
+
+AT_DATA(expected, [blah
+])
+
+AT_DATA(empty, [])
+
+ADD_FILE(foo, [blah
+])
+AT_CHECK(MONOTONE commit --date=2005-05-21T12:30:51 --branch=testbranch --message=blah-blah, [], [ignore], [ignore])
+BASE_R=`BASE_REVISION`
+FILE_R=4cbd040533a2f43fc6691d773d510cda70f4126a
+
+# check that a correct usage produces correctly formatted output
+AT_CHECK(MONOTONE automate get_file $FILE_R, [], [stdout], [ignore])
+AT_CHECK(CANONICALISE(stdout))
+AT_CHECK(cmp expected stdout)
+
+# ensure that missing revisions fail
+NOSUCHREV=0000000000000000000000000000000000000000
+AT_CHECK(MONOTONE automate get_file $NOSUCHREV, [1], [stdout], [ignore])
+AT_CHECK(CANONICALISE(stdout))
+AT_CHECK(cmp empty stdout)
+
+# ensure that revisions are not being completed
+TRUNCATEDREV=4cbd040533a2f43fc6691d773d510c
+AT_CHECK(MONOTONE automate get_file $TRUNCATEDREV, [1], [stdout], [ignore])
+AT_CHECK(CANONICALISE(stdout))
+AT_CHECK(cmp empty stdout)
+
+AT_CLEANUP
