@@ -700,3 +700,6 @@ m4_include(tests/t_rename_execute.at)
 m4_include(tests/t_read_from_file.at)
 m4_include(tests/t_setup_existing_path.at)
 m4_include(tests/t_mt_ignore.at)
+m4_include(tests/t_automate_get_file.at)
+m4_include(tests/t_automate_get_manifest.at)
+m4_include(tests/t_automate_get_revision.at)
